--- a/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dKW-hc-NhL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="urh-dS-bEg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -293,6 +293,100 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zh5-Kc-cgB" customClass="PhotoDrawPenView">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gsE-tO-utS" customClass="PhotoDrawCanvasView">
+                                        <rect key="frame" x="10" y="-22" width="580" height="580"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="gsE-tO-utS" secondAttribute="height" multiplier="1:1" id="kkD-4U-lx3"/>
+                                        </constraints>
+                                    </view>
+                                    <toolbar hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qdr-Ub-FbH">
+                                        <rect key="frame" x="0.0" y="411" width="600" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="4ar-ZD-aVa"/>
+                                        </constraints>
+                                        <items>
+                                            <barButtonItem title="Black" id="VpP-sO-gfo">
+                                                <connections>
+                                                    <action selector="tappedLineColorMenuItem:" destination="Zh5-Kc-cgB" id="us4-zC-5OF"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="UEi-EF-NwH"/>
+                                            <barButtonItem tag="1" title="Red" id="pop-77-0R6">
+                                                <connections>
+                                                    <action selector="tappedLineColorMenuItem:" destination="Zh5-Kc-cgB" id="86S-4C-6rV"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="Dra-hJ-7jY"/>
+                                            <barButtonItem tag="2" title="Green" id="Ess-tw-MYe">
+                                                <connections>
+                                                    <action selector="tappedLineColorMenuItem:" destination="Zh5-Kc-cgB" id="TWd-yr-kiM"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="RqX-1F-LeT"/>
+                                            <barButtonItem tag="3" title="Blue" id="0ok-VM-yeL">
+                                                <connections>
+                                                    <action selector="tappedLineColorMenuItem:" destination="Zh5-Kc-cgB" id="nLF-MD-VGU"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="ly7-C5-xFD"/>
+                                            <barButtonItem tag="4" title="Yellow" id="V5u-l6-zlu">
+                                                <connections>
+                                                    <action selector="tappedLineColorMenuItem:" destination="Zh5-Kc-cgB" id="mZq-Zo-gWZ"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="ZQW-BM-YIl"/>
+                                            <barButtonItem tag="5" title="Close" id="iiR-o2-YED">
+                                                <connections>
+                                                    <action selector="tappedLineColorMenuItem:" destination="Zh5-Kc-cgB" id="Mqt-8n-H6b"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </items>
+                                    </toolbar>
+                                    <view hidden="YES" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dgt-wX-GiS">
+                                        <rect key="frame" x="0.0" y="411" width="600" height="50"/>
+                                        <subviews>
+                                            <slider opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="470" placeholderIntrinsicHeight="30" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="1" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="j9s-Zo-Zg6">
+                                                <rect key="frame" x="8" y="10" width="459" height="31"/>
+                                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                                                <connections>
+                                                    <action selector="valueChnagedLineWidthSlider:" destination="Zh5-Kc-cgB" eventType="valueChanged" id="MA0-CX-itT"/>
+                                                </connections>
+                                            </slider>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z5J-Uk-a4S">
+                                                <rect key="frame" x="535" y="10" width="50" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="3Tl-Om-0NS"/>
+                                                    <constraint firstAttribute="height" constant="30" id="YuM-Uy-cs6"/>
+                                                </constraints>
+                                                <state key="normal" title="Close"/>
+                                                <connections>
+                                                    <action selector="tappedLineWidthMenuCloseButton:" destination="Zh5-Kc-cgB" eventType="touchUpInside" id="1T3-ma-CZA"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DOc-15-G9H">
+                                                <rect key="frame" x="475" y="0.0" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="5vR-kd-Yi0"/>
+                                                    <constraint firstAttribute="height" constant="50" id="Wdo-aJ-AS5"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="1Bq-Ib-o1A"/>
+                                            <constraint firstItem="DOc-15-G9H" firstAttribute="leading" secondItem="j9s-Zo-Zg6" secondAttribute="trailing" constant="10" id="P0U-SB-NeS"/>
+                                            <constraint firstItem="j9s-Zo-Zg6" firstAttribute="leading" secondItem="Dgt-wX-GiS" secondAttribute="leading" constant="10" id="Qv2-J5-yYL"/>
+                                            <constraint firstItem="DOc-15-G9H" firstAttribute="centerY" secondItem="Dgt-wX-GiS" secondAttribute="centerY" id="TaE-SZ-6js"/>
+                                            <constraint firstItem="j9s-Zo-Zg6" firstAttribute="centerY" secondItem="Dgt-wX-GiS" secondAttribute="centerY" id="Vs6-P5-KrL"/>
+                                            <constraint firstItem="Z5J-Uk-a4S" firstAttribute="centerY" secondItem="Dgt-wX-GiS" secondAttribute="centerY" id="j2z-MQ-g0g"/>
+                                            <constraint firstItem="Z5J-Uk-a4S" firstAttribute="leading" secondItem="DOc-15-G9H" secondAttribute="trailing" constant="10" id="pbC-SS-kqE"/>
+                                            <constraint firstAttribute="trailing" secondItem="Z5J-Uk-a4S" secondAttribute="trailing" constant="15" id="qAL-z2-jOw"/>
+                                        </constraints>
+                                    </view>
                                     <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QzL-H7-SyN">
                                         <rect key="frame" x="0.0" y="466" width="600" height="70"/>
                                         <constraints>
@@ -330,24 +424,35 @@
                                             </barButtonItem>
                                         </items>
                                     </toolbar>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gsE-tO-utS" customClass="SmoothLineView">
-                                        <rect key="frame" x="10" y="-22" width="580" height="580"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="gsE-tO-utS" secondAttribute="height" multiplier="1:1" id="kkD-4U-lx3"/>
-                                        </constraints>
-                                    </view>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="QzL-H7-SyN" firstAttribute="width" secondItem="Zh5-Kc-cgB" secondAttribute="width" id="18z-wc-jBk"/>
                                     <constraint firstItem="QzL-H7-SyN" firstAttribute="centerX" secondItem="Zh5-Kc-cgB" secondAttribute="centerX" id="2EH-89-dbn"/>
+                                    <constraint firstItem="Qdr-Ub-FbH" firstAttribute="top" secondItem="gsE-tO-utS" secondAttribute="top" constant="-30" id="C3f-do-Aau"/>
+                                    <constraint firstItem="Dgt-wX-GiS" firstAttribute="leading" secondItem="Zh5-Kc-cgB" secondAttribute="leading" id="J5P-Kp-Xkb"/>
                                     <constraint firstItem="gsE-tO-utS" firstAttribute="centerX" secondItem="Zh5-Kc-cgB" secondAttribute="centerX" id="Mqv-WY-qfc"/>
                                     <constraint firstItem="gsE-tO-utS" firstAttribute="centerY" secondItem="Zh5-Kc-cgB" secondAttribute="centerY" id="Qgz-fb-fNg"/>
                                     <constraint firstItem="gsE-tO-utS" firstAttribute="leading" secondItem="Zh5-Kc-cgB" secondAttribute="leading" constant="10" id="T0A-Is-vMd"/>
+                                    <constraint firstAttribute="trailing" secondItem="Dgt-wX-GiS" secondAttribute="trailing" id="TBk-EP-lQi"/>
+                                    <constraint firstItem="Qdr-Ub-FbH" firstAttribute="centerX" secondItem="Zh5-Kc-cgB" secondAttribute="centerX" id="XdT-cx-nqt"/>
+                                    <constraint firstItem="Qdr-Ub-FbH" firstAttribute="leading" secondItem="Zh5-Kc-cgB" secondAttribute="leading" id="gVF-ZY-C4h"/>
+                                    <constraint firstItem="Qdr-Ub-FbH" firstAttribute="top" secondItem="Dgt-wX-GiS" secondAttribute="bottom" constant="75" id="ipv-nX-QHF"/>
                                     <constraint firstAttribute="trailing" secondItem="gsE-tO-utS" secondAttribute="trailing" constant="10" id="qiS-4Z-mPp"/>
+                                    <constraint firstAttribute="trailing" secondItem="Qdr-Ub-FbH" secondAttribute="trailing" id="v0H-OC-k9v"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="C3f-do-Aau"/>
+                                        <exclude reference="ipv-nX-QHF"/>
+                                    </mask>
+                                </variation>
                                 <connections>
                                     <outlet property="canvasView" destination="gsE-tO-utS" id="htB-Aa-bzK"/>
+                                    <outlet property="eraseButton" destination="d0N-50-ppk" id="pnG-iW-UAU"/>
+                                    <outlet property="lineColorSubMenu" destination="Qdr-Ub-FbH" id="n3c-2t-4O0"/>
+                                    <outlet property="lineWidthLabel" destination="DOc-15-G9H" id="aeS-9U-sFe"/>
+                                    <outlet property="lineWidthSlider" destination="j9s-Zo-Zg6" id="R37-mH-mKr"/>
+                                    <outlet property="lineWidthSubMenu" destination="Dgt-wX-GiS" id="Cmo-Af-pPG"/>
                                 </connections>
                             </view>
                         </subviews>
@@ -356,6 +461,7 @@
                             <constraint firstItem="uyW-Ko-FP5" firstAttribute="top" secondItem="Wfh-aY-Vx8" secondAttribute="bottom" constant="-60" id="2hq-Sv-zz0"/>
                             <constraint firstItem="Zh5-Kc-cgB" firstAttribute="leading" secondItem="bsr-62-H2Z" secondAttribute="leading" id="2iG-aV-pcf"/>
                             <constraint firstItem="Zh5-Kc-cgB" firstAttribute="top" secondItem="JaJ-32-eok" secondAttribute="bottom" id="7AR-Mg-o4A"/>
+                            <constraint firstItem="uyW-Ko-FP5" firstAttribute="top" secondItem="Qdr-Ub-FbH" secondAttribute="bottom" constant="75" id="LYG-Ni-tnI"/>
                             <constraint firstItem="kfz-pT-T9E" firstAttribute="top" secondItem="JaJ-32-eok" secondAttribute="bottom" id="OH2-Kx-Zes"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Wfh-aY-Vx8" secondAttribute="trailing" constant="-80" id="OPN-Hz-Lry"/>
                             <constraint firstAttribute="trailing" secondItem="Zh5-Kc-cgB" secondAttribute="trailing" id="P0g-LX-KCz"/>
@@ -364,6 +470,7 @@
                             <constraint firstAttribute="trailing" secondItem="kfz-pT-T9E" secondAttribute="trailing" id="pxH-kK-tJg"/>
                             <constraint firstItem="uyW-Ko-FP5" firstAttribute="top" secondItem="kfz-pT-T9E" secondAttribute="bottom" id="uJF-q3-FeH"/>
                             <constraint firstItem="kfz-pT-T9E" firstAttribute="leading" secondItem="bsr-62-H2Z" secondAttribute="leading" id="vDl-zL-NFc"/>
+                            <constraint firstItem="uyW-Ko-FP5" firstAttribute="top" secondItem="Dgt-wX-GiS" secondAttribute="bottom" constant="75" id="xpu-Qi-ooC"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="s0S-z8-qVz">
